# ayoreo_chatbot

./: .env.example  .gitignore  AGENT_LOGS.md  HOUSEKEEPING.md  README.md  app.py  environment.yml  fuentes.txt  pyproject.toml  requirements.txt  sanity_app.py
.claude/: settings.json
.devcontainer/: devcontainer.json
configs/: processing.yaml  scraping.yaml  training.yaml
data/processed/: glossaries.json  parallel_corpus.jsonl
data/processed_backup/: pos_sentences.jsonl
data/raw/: ayoreoorg.json  scraping_summary.json  stories.json
data/splits/: test.jsonl  train.jsonl  val.jsonl
data/splits_backup/: train.jsonl
docs/reference/: GCLOUD_AGENT.md  HTML_SCRAPING_SKILL.md  SCRAPER_SKILL_AYOREO.md  SEMANTIC_MATCHING.md  TOKENOPT_SKILL.md
notebooks/: 01_explore_site.ipynb  02_data_analysis.ipynb  03_pos_experiments.ipynb  04_lora_training.ipynb
prompts/: few_shot_templates.md  translation_system.md
scripts/: add_body_decomposition.py  align_bible_llm.py  align_mismatches_llm.py  build_dictionary.py  build_pos_dataset.py  check_ayoreoorg_consistency.py  migrate_to_ayoreoorg.py  run_finetune.py  run_processing.py  run_scraper.py  scrape_bible.py  update_scraping_summary.py  verify_bible_completeness.py
src/: __init__.py
src/inference/: dictionary_lookup.py  engine.py  lora_translator.py  rag_retriever.py  translator.py
src/pos_tagging/: evaluate.py  rule_engine.py  tagset.py
src/processing/: aligner.py  cleaner.py  corpus_builder.py  dictionary_parser.py  glossary_extractor.py  (+1 more)
tests/: test_inference.py  test_processing.py  test_scraping.py
(+152 files in other folders)
